Chapter03/Ch03_03-ingress-alb/terraform-codes/internet_gateway.tf
resource "aws_internet_gateway" "hhtest-internet-gateway" {

  depends_on = [
    aws_vpc.hhtest-vpc
  ]

  vpc_id = aws_vpc.hhtest-vpc.id
}
